--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
-<ul class="list-group">
+<ul class="list-group list-group-flush">
 <% @articles.each do |article| %>
   <li class="list-group-item">
-    <%= link_to article.title, article_path(article) %>
+    <%= link_to article.title, article_path(article), class: "text-decoration-none display-6" %>
   </li>
 <% end %>
 </ul>
